Add Smart Grid Dashboard and District Web Simulator, powered by a new Java web server, and remove outdated scripts.

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -22,10 +22,17 @@
         <main>
             <section class="stats-row">
                 <div class="card stat-card">
-                    <h3>Active Nodes</h3>
+                    <h3>All Nodes</h3>
                     <div class="value" id="node-count">0</div>
                 </div>
-
+                <div class="card stat-card">
+                    <h3>Online Nodes</h3>
+                    <div class="value" id="online-count">0</div>
+                </div>
+                <div class="card stat-card">
+                    <h3>Offline Nodes</h3>
+                    <div class="value" id="offline-count" style="color: #3b82f6;">0</div>
+                </div>
                 <div class="card stat-card">
                     <h3>Outages</h3>
                     <div class="value alert" id="outage-count">0</div>
