Implement a web-based district simulator with dedicated server and client-side components for power status reporting.

--- a/src/main/resources/public/simulator.html
+++ b/src/main/resources/public/simulator.html
@@ -125,7 +125,7 @@
             <span
               id="display-region"
               style="font-size: 0.85rem; color: var(--text-secondary)"
-              >Region</span
+              >Grid Zone</span
             >
           </div>
           <div style="text-align: center; margin-top: 1rem">
@@ -226,7 +226,7 @@
           "inline-block";
         document.getElementById("display-id").textContent = id;
         document.getElementById("display-region").textContent =
-          region || "Unknown Region";
+          region || "Active Grid Zone";
 
         runLifeCycle();
       }
